The suppression "--sun-misc-unsafe-memory-access=allow" should not override the suppression for "--add-opens=java.base/java.lang=ALL-UNNAMED" (#3042)
Closes #2793